--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -15,3 +15,922 @@
     font-size: 16px;
   }
 }
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a.link-big {
+    border-bottom: 3px solid rgba(106,216,106,0.6);
+    -webkit-box-shadow: inset 0 -8px 0 rgba(106,216,106,0.55);
+    box-shadow: inset 0 -8px 0 rgba(106,216,106,0.55);
+    -webkit-transition: background .2s ease;
+    transition: background .2s ease;
+    height: 31px;
+    font-size: 29px;
+    display: inline-block;
+    font-size: 22px;
+    color: #5E5757;
+    font-weight: 700;
+}
+
+a {
+  color: #469AE0;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+
+.features-wrapper.up {
+    position: relative;
+    margin-top: 0;
+    padding-top: 35px;
+}
+
+.section-title-home {
+  text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    letter-spacing: -2px;
+    border-bottom: 1px solid #E0E0E0;
+    height: 7px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 2em 40px 1em 40px;
+    z-index: 1;
+}
+
+
+.features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-top: -20px;
+}
+
+.feature-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: 20px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+.feature-header i {
+    margin-right: 10px;
+    font-size: 30px;
+    margin-right: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+
+.feature-title {
+    font-size: 18px;
+    margin: 0px;
+}
+
+.red{
+  color: #aa2827;
+}
+
+
+.features-wrapper .feature-body {
+    font-size: 16px;
+}
+
+
+.feature-body {
+    font-weight: 100;
+    font-size: 18px;
+    min-height: 200px;
+  }
+
+
+  .feature-body a {
+    border-bottom: 3px solid rgba(106,216,106,0.6);
+    -webkit-box-shadow: inset 0 -5px 0 rgba(106,216,106,0.38);
+    box-shadow: inset 0 -5px 0 rgba(106,216,106,0.38);
+    -webkit-transition: background .2s ease;
+    transition: background .2s ease;
+    height: 20px;
+    display: inline-block;
+}
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.card-white {
+    box-shadow: rgb(231, 231, 231) 1px 1px 2px;
+    background: white;
+    padding: 30px;
+    border-radius: 4px;
+    margin: 20px 50px;
+    min-width: 300px;
+}
+
+.wrapper-grey {
+    color: rgb(78, 78, 78);
+    background: rgb(237, 239, 240);
+    padding: 30px;
+}
+
+.wrapper-blue {
+    background: #357ac2;
+    color: #fff;
+    padding: 30px;
+}
+
+.pixfort_business_10 .header_style {
+    background:#fff;
+    padding:25px 0;
+    border-bottom:3px solid #ddd
+}
+
+.footer-service{
+    padding: 60px 0;
+}
+.center_text {
+    text-align: center;
+    margin-top: 90px;
+}
+
+
+
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-family: "Avenir", "Helvetica", "sans-serif";
+  font-size: 16px;
+  line-height: 1.4;
+  color: #333333;
+  background-color: white;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+a {
+  color: #469AE0;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+hr {
+  margin-top: 22px;
+  margin-bottom: 22px;
+  border: 0;
+  border-top: 1px solid #eeeeee;
+}
+
+h1,
+h2,
+h4 {
+  font-family: "Avenir", "Helvetica", "sans-serif";
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+}
+
+h4 small {
+  font-weight: normal;
+  line-height: 1;
+  color: #777777;
+}
+
+h1,
+h2 {
+  margin-top: 22px;
+  margin-bottom: 11px;
+}
+
+h4 {
+  margin-top: 11px;
+  margin-bottom: 11px;
+}
+
+h4 small {
+  font-size: 75%;
+}
+
+h1 {
+  font-size: 41px;
+}
+
+h2 {
+  font-size: 34px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+p {
+  margin: 0 0 11px;
+}
+
+small {
+  font-size: 87%;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 11px;
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.container:before,
+.container:after {
+  content: " ";
+  display: table;
+}
+
+.container:after {
+  clear: both;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+.row {
+  margin-left: -2px;
+  margin-right: 72px;
+}
+
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.col-xs-4,
+.col-xs-10,
+.col-md-10 {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.col-xs-4,
+.col-xs-10 {
+  float: left;
+}
+
+.col-xs-4 {
+  width: 33.3333333333%;
+}
+
+.col-xs-10 {
+  width: 83.3333333333%;
+}
+
+.col-xs-offset-1 {
+  margin-left: 8.3333333333%;
+}
+
+@media (min-width: 992px) {
+  .col-md-10 {
+    float: left;
+  }
+
+  .col-md-10 {
+    width: 83.3333333333%;
+  }
+
+  .col-md-offset-1 {
+    margin-left: 8.3333333333%;
+  }
+}
+
+.btn {
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 6px 12px;
+  font-size: 16px;
+  line-height: 1.4;
+  border-radius: 4px;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #C73333;
+  border-color: #b32e2e;
+}
+
+.btn-lg {
+  padding: 10px 16px;
+  font-size: 20px;
+  line-height: 1.3333333;
+  border-radius: 4px;
+}
+
+.fade {
+  opacity: 0;
+}
+
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed;
+  border-top: 4px solid \9;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  list-style: none;
+  font-size: 16px;
+  text-align: left;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0,0,0,0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+  background-clip: padding-box;
+}
+
+.dropdown-menu>li>a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.4;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.dropdown-menu-right {
+  left: auto;
+  right: 0;
+}
+
+.close {
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+}
+
+button.close {
+  padding: 0;
+  background: transparent;
+  border: 0;
+  -webkit-appearance: none;
+}
+
+.modal {
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+}
+
+.modal.fade .modal-dialog {
+  -webkit-transform: translate(0, -25%);
+  transform: translate(0, -25%);
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 10px;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #999;
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 3px 9px rgba(0,0,0,0.5);
+  box-shadow: 0 3px 9px rgba(0,0,0,0.5);
+  background-clip: padding-box;
+  outline: 0;
+}
+
+.modal-header {
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.modal-header:before,
+.modal-header:after {
+  content: " ";
+  display: table;
+}
+
+.modal-header:after {
+  clear: both;
+}
+
+.modal-header .close {
+  margin-top: -2px;
+}
+
+.modal-title {
+  margin: 0;
+  line-height: 1.4;
+}
+
+.modal-body {
+  position: relative;
+  padding: 15px;
+}
+
+
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+
+  .modal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+  }
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+
+@media (max-width: 767px) {
+  .hidden-xs {
+    display: none !important;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .hidden-sm {
+    display: none !important;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .hidden-md {
+    display: none !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .hidden-lg {
+    display: none !important;
+  }
+}
+
+.mdi:before {
+  display: inline-block;
+  font: normal normal normal 24px/1 "Material Design Icons";
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+.mdi-auto-fix:before {
+  content: "\F068";
+}
+
+.mdi-cube-outline:before {
+  content: "\F1A7";
+}
+
+.mdi-keyboard-variant:before {
+  content: "\F313";
+}
+
+.mdi-laptop:before {
+  content: "\F322";
+}
+
+.mdi-source-pull:before {
+  content: "\F4C2";
+}
+
+.mdi-wallet-travel:before {
+  content: "\F587";
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 992px) {
+  .section-title-home {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .section-title-home {
+    height: auto;
+    border: none;
+  }
+}
+
+.section-title-home-content {
+  background-color: #F4F4F4;
+  position: relative;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+@media (max-width: 992px) {
+  .section-title-home-content {
+    background-color: transparent;
+  }
+}
+
+a {
+  outline: 0;
+  text-decoration: none;
+  color: inherit;
+}
+
+.feature-body a {
+  border-bottom: 3px solid rgba(106,216,106,0.6);
+  -webkit-box-shadow: inset 0 -5px 0 rgba(106,216,106,0.38);
+  box-shadow: inset 0 -5px 0 rgba(106,216,106,0.38);
+  height: 20px;
+  display: inline-block;
+}
+
+.features-wrapper {
+    background-color: #F4F4F4;
+    padding-bottom: 20px;
+}
+
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-top: -20px;
+}
+
+@media (max-width: 992px) {
+  .features {
+    padding-top: 30px;
+  }
+}
+
+.feature {
+  padding: 40px 10px 0 10px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 33%;
+  flex: 0 0 33%;
+  padding-bottom: 0;
+}
+
+@media (max-width: 992px) {
+  .feature {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    padding: 0px 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .feature {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+  }
+}
+
+.feature-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 20px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 20px;
+}
+
+.feature-header i {
+  margin-right: 10px;
+  font-size: 30px;
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.feature-title {
+  font-size: 18px;
+  margin: 0px;
+}
+
+.feature-body {
+  font-weight: 100;
+  font-size: 18px;
+  min-height: 200px;
+}
+
+.features-wrapper .feature-body {
+  font-size: 16px;
+}
+
+.formats-illustration {
+    position: relative;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.formats-illustration ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    position: relative;
+    list-style: none;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+    z-index: 1;
+}
+
+.formats-illustration ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: relative;
+    width: 32%;
+    padding: 15px;
+    background: white;
+    margin: 10px 0px;
+    height: 160px;
+    font-weight: 900;
+    font-size: 18px;
+    border-radius: 3px 3px 0 0;
+    border-bottom: 6px solid #2ecc71;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+}
+
+.modalDialog {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+  }
+
+  .modalDialog:target {
+    opacity:1;
+    pointer-events: auto;
+  }
+
+  .modalDialog > div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    border-radius: 10px;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+  }
+
+  .close {
+    background: #606061;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+  }
+
+  .close:hover { background: #00d9ff; }
+
+
+
+
+#enterprise-testimonials .enterprise-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+}
+
+#enterprise-testimonials .enterprise-nav img.active {
+    opacity: 1;
+}
+
+#enterprise-testimonials .enterprise-nav img {
+    opacity: 0.2;
+}
+
+.enterprise-nav .quote-author {
+    margin-bottom: 20px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 3px solid white;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+    border-radius: 50%;
+}
+
+img {
+    vertical-align: middle;
+}
+.enterprise-testimonial {
+    font-size: 25px;
+    width: 500px;
+    margin: 30px auto;
+    font-weight: 100;
+    min-height: 200px;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.enterprise-testimonial .text-right {
+    text-align: center;
+    font-size: 16px;
+    margin-top: 30px;
+}
+
+#footer {
+    font-weight: 300;
+    color: #CCCCCC;
+    background-color: #F4F4F4;
+    padding-bottom: 50px;
+}
+
+
+#footer .flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
