added anchor links

--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,9 +1,15 @@
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="https://twitter.com/ChinaCryptoNews"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
+    <br>
+    <div>
+                Yongjia Road 580, 200000 Shanghai China <br>
+
+           </div>
   </div>
+
   <div class="footer-copyright">
     © Copyright 2017 | China Blockchain Parners | All Rights Reserved
   </div>
