--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -8,9 +8,9 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <a href="" class="navbar-wagon-item navbar-wagon-link">Home</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Approach</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Recruitment</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a>
+    <a href="#Mission" class="navbar-wagon-item navbar-wagon-link">Approach</a>
+    <a href="#Values" class="navbar-wagon-item navbar-wagon-link">Values</a>
+    <a href="mailto:info@chinablockchainpartners.com" data-mode="popup" target="_blank" class="navbar-wagon-item navbar-wagon-link">Contact</a>
 
   </div>
 
@@ -20,9 +20,9 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Approach</a></li>
-        <li><a href="#">Recruitment</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#Mission">Approach</a></li>
+        <li><a href="#Values">Values</a></li>
+        <li><a href="mailto:info@chinablockchainpartners.com" data-mode="popup" target="_blank">Contact</a></li>
       </ul>
     </div>
   </div>
