--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@
       <br>We build long lasting partnerships with firms, investors and media partners leading to a sustainable growth.
 
     </p>
-    <a class="button btn btn-danger" data-toggle="modal" data-target="#employer-form-modal"> Learn more how we can help </a>
+    <a href="#Services" class="button btn btn-danger"> Learn more how we can help </a>
   </div>
 </div>
 
@@ -21,7 +21,7 @@
 <div class="features-wrapper up">
   <div class="container features-container">
     <h2 class="section-title-home">
-      <div class="section-title-home-content" style="font-size:30px;">
+      <div class="section-title-home-content" id="Services" style="font-size:30px;">
         What We Do
       </div>
     </h2>
@@ -138,7 +138,7 @@
 
 
      <!-- ========== Mission Statement ========== -->
-<div class="features-wrapper up" style="padding-bottom: 35px;">
+<div class="features-wrapper up" id="Mission" style="padding-bottom: 35px;">
   <div class="container features-container">
     <h2 class="section-title-home">
       <div class="section-title-home-content" style="font-size:30px;">
@@ -167,7 +167,7 @@
   <div class="container features-container">
     <h2 class="section-title-home">
       <div class="section-title-home-content" style="font-size:30px;background-color: #aa2827;color: #ffffff;">
-        How do we work
+        How We Work
       </div>
     </h2>
    <div class="row">
@@ -213,7 +213,7 @@
     <div>
       <h3 style="font-size: 40px;">Let’s get started.</h3>
       <p style="margin-bottom: 20px;font-size: 25px; width:730px;">One step at a time, lets meet and greet.  </p>
-      <p style="margin-bottom: 10px;font-size: 25px; width:730px;">Do not assume we are too expensive or too busy to talk to you. <br>Tell us about your project and we will let you know how <br>China Blockchain Partners can help. </p>
+      <p style="margin-bottom: 10px;font-size: 25px; width:730px;">Tell us about your project and we will let you know how <br>China Blockchain Partners can help. </p>
 
 
       <a class="button btn btn-danger btn-lg employers-apply" data-toggle="modal" data-target="#employer-form-modal" style="padding: 14px 25px;font-size: 20px; margin-top:20px;"> It’s free to talk </a>
@@ -337,11 +337,11 @@
 
 <!-- Recruitment ================================================== -->
 
-<div class="features-wrapper up" style="background-color: #aa2827;">
+<div class="features-wrapper up" id="Values" style="background-color: #aa2827;">
   <div class="container features-container">
     <h2 class="section-title-home">
       <div class="section-title-home-content" style="font-size:30px;background-color: #aa2827;color: #ffffff;">
-        Recruitment
+        Values
       </div>
     </h2>
 
